# product-classification-hiring-demo

./: README.md  pyproject.toml
src/dataset/: __init__.py
tests/: test_dataset.py
